@@ -74,5 +74,5 @@ sub_subinfo	main::foo	[ 1 3 5 3 0 0 0 0 ]
 sub_subinfo	main::foo	called_by	1	13	[ 1 0 0 0 0 0 0 main::baz ]
 sub_subinfo	main::foo	called_by	1	14	[ 1 0 0 0 0 0 0 main::baz ]
 sub_subinfo	main::foo	called_by	2	1	[ 1 0 0 0 0 0 0 main::RUNTIME ]
-sub_subinfo	main::x	[ undef undef undef 1 0 0 0 0 ]
+sub_subinfo	main::x	[ 1 undef undef 1 0 0 0 0 ]
 sub_subinfo	main::x	called_by	1	15	[ 1 0 0 0 0 0 0 main::baz ]
